@@ -3,18 +3,15 @@ package quentin.UI.GUI;
 import javafx.scene.control.*;
 import quentin.UI.InputHandler;
 import quentin.UI.OutputHandler;
-import quentin.core.Player;
-
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 public class GUIInputHandler implements InputHandler {
 
-    public boolean askPie(Player player){
+    public boolean askPie(String whitePlayerName){
         Alert alert = new Alert(Alert.AlertType.CONFIRMATION);
         alert.setTitle("Pie Rule Dialog");
-        alert.setContentText(player.getName() + " " + OutputHandler.Message.QUERY_PIE);
+        alert.setContentText(String.format(OutputHandler.Message.QUERY_PIE, whitePlayerName));
         alert.setHeaderText(null);
 
         ((Button) alert.getDialogPane().lookupButton(ButtonType.OK)).setText("Yes");
@@ -25,7 +22,7 @@ public class GUIInputHandler implements InputHandler {
     }
 
     public int askSize() {
-        ArrayList<Integer> sizes = new ArrayList<>(Arrays.asList(4, 5, 6, 7, 8, 9, 10, 11,12,13));
+        List<Integer> sizes = List.of(4, 5, 6, 7, 8, 9, 10, 11,12,13);
         ChoiceDialog<Integer> dialog = new ChoiceDialog<>(13, sizes);
 
         dialog.setTitle("Enter Size");
